[gd_scene load_steps=33 format=3 uid="uid://s00ux2wsh87x"]

[ext_resource type="Script" path="res://Menu/controls.gd" id="1_qu2ad"]
[ext_resource type="Texture2D" uid="uid://qc44o1q24wry" path="res://Utilities/menu/double_setting.png" id="2_7dyug"]
[ext_resource type="Texture2D" uid="uid://bn7ofxq610cnd" path="res://Utilities/menu/settings_overlay.png" id="3_4la7u"]
[ext_resource type="PackedScene" uid="uid://c6b1dgadp0jag" path="res://Menu/input_button.tscn" id="4_5yax4"]
[ext_resource type="Texture2D" uid="uid://tm0au7cw4jk0" path="res://Utilities/menu/guide/newguide_move.png" id="4_j6rf3"]
[ext_resource type="FontFile" uid="uid://calx8htg8hbrm" path="res://Utilities/Font/type_writer.ttf" id="5_82x5m"]
[ext_resource type="Texture2D" uid="uid://brsjd3fnydsrf" path="res://Utilities/menu/guide/newguide_dash.png" id="5_uvh8p"]
[ext_resource type="Script" path="res://Menu/audio_options.gd" id="6_2n3o3"]
[ext_resource type="Texture2D" uid="uid://c1ymgpn2rjol0" path="res://Utilities/menu/guide/newguide_slash.png" id="6_w1m3n"]
[ext_resource type="Script" path="res://Menu/volume_slider.gd" id="7_j2v7y"]
[ext_resource type="Texture2D" uid="uid://dacw6a741qhfc" path="res://Utilities/menu/guide/newguide_cleave.png" id="7_vruri"]
[ext_resource type="Texture2D" uid="uid://dgih6rtxrqd5s" path="res://Utilities/menu/guide/newguide_charge.png" id="8_gxo8o"]
[ext_resource type="Texture2D" uid="uid://dxd6bovehhdyd" path="res://Utilities/menu/guide/newguide_surge.png" id="9_dfb30"]
[ext_resource type="Texture2D" uid="uid://jmk4mo37wpkc" path="res://Utilities/menu/double_setting_OVERLAY.png" id="10_5we8n"]
[ext_resource type="Texture2D" uid="uid://ba18sugow8can" path="res://Utilities/menu/video_standalone_black.png" id="10_nmqha"]
[ext_resource type="AudioStream" uid="uid://nmnvta3c27qu" path="res://audio/music/ABYSSAL BLADE.wav" id="16_i6nfl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0lvro"]
texture = ExtResource("2_7dyug")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l57ye"]
texture = ExtResource("3_4la7u")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ar7di"]
texture = ExtResource("4_j6rf3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mntf1"]
texture = ExtResource("5_uvh8p")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mcsn7"]
texture = ExtResource("6_w1m3n")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k5t1k"]
texture = ExtResource("7_vruri")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_00dpw"]
texture = ExtResource("8_gxo8o")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d52o6"]
texture = ExtResource("9_dfb30")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3dxnr"]
texture = ExtResource("10_nmqha")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6r0bb"]
texture = ExtResource("10_5we8n")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_obkwh"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t1giq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3chvb"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4svi"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4uvjp"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fp67l"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Controls" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_qu2ad")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_0lvro")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_l57ye")

[node name="Description" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Move" type="Panel" parent="Description"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ar7di")

[node name="Dash" type="Panel" parent="Description"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mntf1")

[node name="Attack" type="Panel" parent="Description"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mcsn7")

[node name="HeavyAttack" type="Panel" parent="Description"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_k5t1k")

[node name="Charge" type="Panel" parent="Description"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_00dpw")

[node name="Surge" type="Panel" parent="Description"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_d52o6")

[node name="Video" type="Control" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoMask" type="Panel" parent="Video"]
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3dxnr")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Video/VideoMask"]
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 220.5
offset_top = 122.0
offset_right = -56.5
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Video/VideoMask/AspectRatioContainer"]
layout_mode = 2
autoplay = true
expand = true
loop = true
bus = &"SFX"

[node name="Outline" type="Panel" parent="Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6r0bb")

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -87.0
offset_right = -26.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 5

[node name="ActionList" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="InputButton" parent="MarginContainer/ActionList" instance=ExtResource("4_5yax4")]
layout_mode = 2
focus_neighbor_top = NodePath("../InputButton9")
focus_neighbor_bottom = NodePath("../InputButton2")

[node name="InputButton2" parent="MarginContainer/ActionList" instance=ExtResource("4_5yax4")]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 9
focus_neighbor_top = NodePath("../InputButton")
focus_neighbor_bottom = NodePath("../InputButton3")

[node name="InputButton3" parent="MarginContainer/ActionList" instance=ExtResource("4_5yax4")]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 9
focus_neighbor_top = NodePath("../InputButton2")
focus_neighbor_bottom = NodePath("../InputButton4")

[node name="InputButton4" parent="MarginContainer/ActionList" instance=ExtResource("4_5yax4")]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 9
focus_neighbor_top = NodePath("../InputButton3")
focus_neighbor_bottom = NodePath("../InputButton5")

[node name="InputButton5" parent="MarginContainer/ActionList" instance=ExtResource("4_5yax4")]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 9
focus_neighbor_top = NodePath("../InputButton4")
focus_neighbor_bottom = NodePath("../InputButton6")

[node name="InputButton6" parent="MarginContainer/ActionList" instance=ExtResource("4_5yax4")]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 9
focus_neighbor_top = NodePath("../InputButton5")
focus_neighbor_bottom = NodePath("../InputButton7")

[node name="InputButton7" parent="MarginContainer/ActionList" instance=ExtResource("4_5yax4")]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 9
focus_neighbor_top = NodePath("../InputButton6")
focus_neighbor_bottom = NodePath("../InputButton8")

[node name="InputButton8" parent="MarginContainer/ActionList" instance=ExtResource("4_5yax4")]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 9
focus_neighbor_top = NodePath("../InputButton7")
focus_neighbor_bottom = NodePath("../InputButton9")

[node name="InputButton9" parent="MarginContainer/ActionList" instance=ExtResource("4_5yax4")]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 9
focus_neighbor_top = NodePath("../InputButton8")
focus_neighbor_bottom = NodePath("../InputButton")

[node name="Back" type="Button" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -97.0
offset_top = -35.0
offset_right = -65.0
offset_bottom = -22.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_override_colors/font_pressed_color = Color(0.281428, 0.285774, 0.287634, 1)
theme_override_fonts/font = ExtResource("5_82x5m")
theme_override_font_sizes/font_size = 9
theme_override_styles/focus = SubResource("StyleBoxFlat_obkwh")
theme_override_styles/hover = SubResource("StyleBoxFlat_t1giq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3chvb")
theme_override_styles/normal = SubResource("StyleBoxFlat_v4svi")
text = "Back
"
alignment = 2

[node name="ControlsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 18.0
offset_right = 105.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("5_82x5m")
theme_override_font_sizes/font_size = 9
text = "Controls"
vertical_alignment = 1

[node name="LayoutLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.5
offset_top = -94.0
offset_right = -47.5
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_82x5m")
theme_override_font_sizes/font_size = 14
text = "Mouse + Keyboard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 159.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
theme_override_styles/panel = SubResource("StyleBoxFlat_4uvjp")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 78.0
offset_top = 66.0
offset_right = 569.0
offset_bottom = 336.0

[node name="ResetButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("5_82x5m")
theme_override_font_sizes/font_size = 10
text = "reset to default"

[node name="AudioOptions" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_2n3o3")

[node name="PanelContainer2" type="PanelContainer" parent="AudioOptions"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 172.0
offset_right = 267.0
offset_bottom = 280.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_fp67l")

[node name="VBoxContainer" type="VBoxContainer" parent="AudioOptions/PanelContainer2"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="AudioOptions/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("5_82x5m")
theme_override_font_sizes/font_size = 10
text = "Master"

[node name="MasterSlider" type="HSlider" parent="AudioOptions/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
max_value = 1.0
step = 0.001
script = ExtResource("7_j2v7y")
bus_name = "Master"

[node name="SFXLabel" type="Label" parent="AudioOptions/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("5_82x5m")
theme_override_font_sizes/font_size = 10
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="AudioOptions/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
max_value = 1.0
step = 0.01
script = ExtResource("7_j2v7y")
bus_name = "SFX"

[node name="MusicLabel" type="Label" parent="AudioOptions/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("5_82x5m")
theme_override_font_sizes/font_size = 10
text = "Music"

[node name="MusicSlider" type="HSlider" parent="AudioOptions/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
max_value = 1.0
step = 0.01
script = ExtResource("7_j2v7y")
bus_name = "Music"

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_i6nfl")
bus = &"Music"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="drag_ended" from="AudioOptions/PanelContainer2/VBoxContainer/MasterSlider" to="." method="_on_master_slider_drag_ended"]
[connection signal="mouse_exited" from="AudioOptions/PanelContainer2/VBoxContainer/MasterSlider" to="AudioOptions" method="_on_master_slider_mouse_exited"]
[connection signal="drag_ended" from="AudioOptions/PanelContainer2/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="mouse_exited" from="AudioOptions/PanelContainer2/VBoxContainer/SFXSlider" to="AudioOptions" method="_on_sfx_slider_mouse_exited"]
[connection signal="drag_ended" from="AudioOptions/PanelContainer2/VBoxContainer/MusicSlider" to="." method="_on_music_slider_drag_ended"]
[connection signal="mouse_exited" from="AudioOptions/PanelContainer2/VBoxContainer/MusicSlider" to="AudioOptions" method="_on_music_slider_mouse_exited"]
